Error de estado solicitud con sus razones de rechazo, corregido

--- a/app/assets/stylesheets/form-inputs.scss
+++ b/app/assets/stylesheets/form-inputs.scss
@@ -76,7 +76,7 @@
             color: v.$secondary-color;
         }
 
-        &--deniend {
+        &--denied {
             color: v.$danger-color;
         }
     }
