--- a/app/views/feedbacks/show.html.erb
+++ b/app/views/feedbacks/show.html.erb
@@ -1,4 +1,8 @@
-<p style="color: green"><%= notice %></p>
+<main class="main">
+  <div class="container form form--mandala">
+    <h1 class="form__heading--mandala">Retroalimentación</h1>
 
-<%= render @feedback %>
+    <%= render @feedback %>
+  </div>
+</main>
 
