--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -10,6 +10,10 @@
         <%= link_to "Agregar retroalimentación", new_feedback_path(:request_id => @request.hashid), class: "form__button-submit" %>
       <% end %>
 
+      <% if current_user_account && @request.status == "closed" && !@feedback.nil? %>
+        <%= link_to "Ver retroalimentación", feedback_url(@feedback), class: "form__button-submit" %>
+      <% end %>
+
       <% if @request.status == "pending" && current_user_account %>
         <%= link_to "Atender", change_status_request_path(request), class: "form__button-submit" %>
       <% end %>
