Corrigiendo error el boton de atender, vista solicitud admin

--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -15,7 +15,7 @@
       <% end %>
 
       <% if @request.status == "pending" && current_user_account %>
-        <%= link_to "Atender", change_status_request_path(request), class: "form__button-submit" %>
+        <%= link_to "Atender", change_status_request_path(@request), class: "form__button-submit" %>
       <% end %>
 
       <%= link_to "Regresar", current_user_account ? :back : root_path, class: "form__button-back" %>
