Se hacen correcciones en el listado de requests para los trabajadores

--- a/app/views/requests/employee_views/_employee_request_actions.html.erb
+++ b/app/views/requests/employee_views/_employee_request_actions.html.erb
@@ -1,4 +1,4 @@
-<% case request.status
+<% case @status
     when "in_process" %>
   <%= link_to edit_task_path(request: request), class: "form__button-toggle form__button--desktop" do %>
     <i class="bi bi-pencil-square"></i>&nbsp;Atender
