Corrección en tipo de inputs

--- a/app/views/requests/ask_state.html.erb
+++ b/app/views/requests/ask_state.html.erb
@@ -11,7 +11,7 @@
 
         <div class="form__input--mandala">
           <%= form.label "Correo electrónico", class: "form__input-label" %>
-          <%= form.text_field :requester_mail, placeholder: "Correo electrónico", class: "form__input-textfield" %>
+          <%= form.email_field :requester_mail, placeholder: "Correo electrónico", class: "form__input-textfield" %>
         </div>
 
         <div class="button-group">
