--- a/app/views/user_accounts/registrations/new.html.erb
+++ b/app/views/user_accounts/registrations/new.html.erb
@@ -19,7 +19,7 @@
 
       <div class="form__input--mandala">
         <%= f.label "Correo electrónico", class: "form__input-label" %>
-        <%= f.text_field :email, placeholder: "Correo electrónico", class: "form__input-textfield" %>
+        <%= f.email_field :email, placeholder: "Correo electrónico", class: "form__input-textfield" %>
       </div>
 
       <div class="form__input--mandala d-none">
