Correción del link para agregar retroalimentación

--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -6,11 +6,11 @@
     <%= render @request %>
 
     <div class="button-group">
-      <% if !current_user_account && @request.status == "closed" %>
+      <% if !current_user_account && @request.status == "closed" && @feedback.nil? %>
         <%= link_to "Agregar retroalimentación", new_feedback_path(:request_id => @request.hashid), class: "form__button-submit" %>
       <% end %>
 
-      <% if current_user_account && @request.status == "closed" && !@feedback.nil? %>
+      <% if @request.status == "closed" && !@feedback.nil? %>
         <%= link_to "Ver retroalimentación", feedback_url(@feedback), class: "form__button-submit" %>
       <% end %>
 
