Corrección del contenido input, lugar de trabajo

--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -100,7 +100,7 @@
 
   <div class="form__input">
     <label for="location" class="form__input-label">Lugar del trabajo</label>
-    <input type="text" id="location" class="form__input-textfield" value="<%= request.request_location.work_building.name %>" disabled>
+    <input type="text" id="location" class="form__input-textfield" value="<%= request.request_location.name %>" disabled>
   </div>
 
   <div class="form__input">
