Cambio de tipo de input, extension telefonica

--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -29,7 +29,7 @@
     <div class="grid-columns-2-tablet grid-columns-3">
       <div class="form__input">
         <%= form.label "Extensión telefónica", class: "form__input-label" %>
-        <%= form.number_field :requester_extension, placeholder: "Ej: +506", class: "form__input-textfield" %>
+        <%= form.text_field :requester_extension, placeholder: "Ej: +506", class: "form__input-textfield" %>
       </div>
 
       <div class="form__input">
