--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -16,7 +16,7 @@ $warning-color: #e6a226;
 $danger-color: #c92a19;
 
 // Font Properties
-$font-family-primary: 'Open Sans', sans-serif;
+$font-family-primary: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 
 $fs-normal: 1.6rem;
 $fs-medium: 1.8rem;
