Informacion del footer corregida, correo aun queda pendiente

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,14 +5,13 @@
                 <%= image_tag 'footer-logo.svg', :alt=> 'logo footer' %>
             </div>
             <div class="footer__info">
-                <p class="footer__paragraph">Oficina de Servicios Generales, Universidad de Costa Rica. 
-                <br> Edificio Saprissa, San José, Costa Rica. 
-                Teléfonos: 2511-3652 / 2511-6765
-                <br> Correo electrónico: servicios.generales@ucr.ac.cr</p>
+                <p class="footer__paragraph">Oficina de Servicios Generales, Universidad de Costa Rica, Sede Occidente.
+                <br>Teléfonos: 2511 7035 / 2511 7028.
+                <br>Correo electrónico: servicios.generales@ucr.ac.cr</br>
             </div>
         </div>
         <div class="footer__copyright">
-            <p class="footer__paragraph">© 2022 OSG UNIVERSIDAD DE COSTA RICA</p>
+            <p class="footer__paragraph">&copy; <%= Date.current.year %> SO-OSG UNIVERSIDAD DE COSTA RICA</p>
         </div>
     </div>
 </footer>
