--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -18,7 +18,7 @@
         <%= link_to "Atender", change_status_request_path(@request), class: "form__button-submit" %>
       <% end %>
 
-      <% if @request.status == "in_process" && current_user_account.worker? %>
+      <% if @request.status == "in_process" && current_user_account.worker? && @request.status != "completed" %>
         <%= link_to "Atender", edit_task_path(request: @request), class: "form__button-submit" %>
       <% end %>
 
