--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -3,7 +3,7 @@
     <h1 class="form__heading">Rechazo de solicitud</h1>
     <hr class="mb-3">
 
-    <%= render @request %>
+    <%= render "requests/shared_views/request-summary", request: @request %>
 
     <%= render "requests/admin_views/request_reasons", request: @request, type: "deny" %>
   </div>
